--- a/pro-Integ/views/profile.ejs
+++ b/pro-Integ/views/profile.ejs
@@ -17,11 +17,12 @@
             <div class="data-container col-6">
                 <div class="d-flex align-items-center ">
                     <h1 class="main-title blancos"><%=data.usuario %>
-                        <a href="/users/profile-edit/id/<%=data.id%>">
-                            <i class="fas fa-cog"></i>
-                        </a>
                     </h1>
-                    <a class="btn mt-3 ml-4" href="/users/profile-edit/id/<%=data.id%>">EDITAR</a>
+                    <% if (locals.user != undefined) { %>
+                        <% if (locals.user.id == data.id) { %>
+                            <a class="btn mt-3 ml-4" href="/users/profile-edit/id/<%=data.id%>">EDITAR</a>
+                        <% } %>
+                    <% } %>
                 </div>
                 <div>
                     <ul class="blancos">
