cookie recordarme app.js

--- a/pro-Integ/views/partials/headerLogueado.ejs
+++ b/pro-Integ/views/partials/headerLogueado.ejs
@@ -58,7 +58,7 @@
 	
 				<ul class="right-navbar">
 					<li><a class="blancos hipervinculos" href="/users/profile/id/<%= locals.user.id %>">
-						Bienvenido <%= locals.user.userName %>! <i class="fas fa-user"></i>
+						Bienvenido <%= locals.user.usuario %>! <i class="fas fa-user"></i>
 						</a>
 					</li>
 					<li>
